--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "declarations": true
   },
   "dependencies": {
+    "csrf": "^3.1.0",
     "egg": "^2.9.1",
+    "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0"
   },
   "devDependencies": {
