--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "csrf": "^3.1.0",
-    "egg": "^2.9.1",
+    "egg": "^2.22.2",
+    "egg-jwt": "^3.1.6",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0"
   },
