--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "csrf": "^3.1.0",
     "egg": "^2.22.2",
+    "egg-bcrypt": "^1.1.0",
     "egg-jwt": "^3.1.6",
     "egg-mongoose": "^3.2.0",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "egg-validation": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
