--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "egg-jwt": "^3.1.6",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
-    "egg-validation": "^1.0.0"
+    "egg-validate": "^2.0.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
